adjust comments items head

--- a/paper.html
+++ b/paper.html
@@ -142,12 +142,13 @@
       </div>
     </div>
     <div id="comments">
+      <h3>Comments</h3>
       <div class="panel-group" id="accordion">
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
               <a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                Collapsible Group Item #1
+                Paper Comments #1
               </a>
             </h4>
           </div>
@@ -161,7 +162,7 @@
           <div class="panel-heading">
             <h4 class="panel-title">
               <a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                Collapsible Group Item #2
+                Paper Comments #2
               </a>
             </h4>
           </div>
@@ -175,7 +176,7 @@
           <div class="panel-heading">
             <h4 class="panel-title">
               <a data-toggle="collapse" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                Collapsible Group Item #3
+                Paper Comments #3
               </a>
             </h4>
           </div>
