add star rating

--- a/paper.html
+++ b/paper.html
@@ -2,8 +2,10 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link href="public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="public/css/style.css" rel="stylesheet">
+
+  <link rel="stylesheet" type="text/css" href="public/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="public/css/style.css">
+
 </head>
 
 <body>
@@ -52,7 +54,8 @@
           </div>
 
           <div class="star-rating col-md-4">
-            Star Rating
+            Rating
+            <input type="number" name="your_awesome_parameter" id="some_id" class="rating" />
           </div>
         </div>
         <ul class="nav nav-tabs">
@@ -190,7 +193,8 @@
     </div>
   </div>
   
-  <script src="public/js/jquery-1.10.2.min.js"></script>
-  <script src="public/bootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="public/js/jquery-1.10.2.min.js"></script>
+  <script type="text/javascript" src="public/bootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="public/js/bootstrap-rating-input.min.js"></script>
 </body>
 </html>
