--- a/paper.html
+++ b/paper.html
@@ -54,8 +54,16 @@
           </div>
 
           <div class="star-rating col-md-4">
-            Rating
-            <input type="number" name="your_awesome_parameter" id="some_id" class="rating" />
+            <h5>Rating</h5>
+            <i class='glyphicon glyphicon-star'></i>
+            <i class='glyphicon glyphicon-star'></i>
+            <i class='glyphicon glyphicon-star'></i>
+            <i class='glyphicon glyphicon-star-empty'></i>
+            <i class='glyphicon glyphicon-star-empty'></i>
+            6.4
+            <br><br><br>
+            <h5>Your rating</h5>
+            <input type="number" data-max="4" data-min="0" name="your_awesome_parameter" id="some_id" class="rating" />
           </div>
         </div>
         <ul class="nav nav-tabs">
