--- a/paper.html
+++ b/paper.html
@@ -1,11 +1,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Paper Details</title>
 
   <link rel="stylesheet" type="text/css" href="public/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="public/css/style.css">
-
 </head>
 
 <body>
