add myPaper page

--- a/myPaper.html
+++ b/myPaper.html
@@ -29,6 +29,10 @@
   <div class="container-fluid col-md-9 col-md-offset-1">
     <div class="row">
       <h3>My Paper</h3>
+      <a href="#" id="addLiterature" class="btn btn-warning">
+        <span class="glyphicon glyphicon-plus"></span>
+        <span>Add Literature</span>
+      </a>
       <table class="table table-striped">
         <thead>
           <tr>
